force-app/main/default/objects/Parent__c/fields/Father_Profession__c.field-meta.xml
<CustomField>
    <fullName>Father_Profession__c</fullName>
    <label>Father Profession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Un-Employed</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>