force-app/main/default/objects/Parent__c/fields/Mother_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_Name__c</fullName>
    <description>Please Enter Mother Name</description>
    <label>Mother Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>