force-app/main/default/objects/Parent__c/fields/Mother_Profession__c.field-meta.xml
<CustomField>
    <fullName>Mother_Profession__c</fullName>
    <label>Mother Profession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>House Wife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>